python-defaults (2.6.5-11) unstable; urgency=medium

  * Add README.PyDist to python-doc package
  * pycompile: compile public module for the right Python version (really
    closes: 590224)

 -- Piotr Ożarowski <piotr@debian.org>  Tue, 27 Jul 2010 21:25:54 +0200

python-defaults (2.6.5-10) unstable; urgency=medium

  * dh_python2:
    - add --depend, --recommend and --suggest command line options
     (use it if requires.txt doesn't contain dependency that package needs)
    - add {/usr,}/sbin to the list of directories with checked shebangs
  * pycompile: do not exit before all background byte compilation is finished
    (closes: 590224)

 -- Piotr Ożarowski <piotr@debian.org>  Sun, 25 Jul 2010 12:34:56 +0200

python-defaults (2.6.5-9) unstable; urgency=low

  [ Piotr Ożarowski ]
  * pyclean, pycompile: use .communicate() instead of .wait() to avoid hanging
    `dpkg -L PACKAGE` in few situations
  * dh_python2: follow Distribute and replace all non-alphanumeric
    characters with underscore in distribution name

  [ Matthias Klose ]
  * Require python (>= 2.6.5-9~) in generated dependencies to use the fixed
    pycompile.

 -- Piotr Ożarowski <piotr@debian.org>  Mon, 19 Jul 2010 20:27:50 +0200

python-defaults (2.6.5-8) unstable; urgency=low

  * Revert:
    - python-minimal: Provide symlink to binary and manpage for
      /usr/bin/python2.
    This interpreter name is not created in the upstream sources.
    python should be used instead.

 -- Matthias Klose <doko@debian.org>  Sat, 17 Jul 2010 13:10:06 +0200

python-defaults (2.6.5-7) unstable; urgency=low

  * pyversions.py: fall back to the list of supported Python versions
    if debian/pyversions doesn't exist (as in -5, closes: 588820, thanks to
    Vincent Legout)

 -- Piotr Ożarowski <piotr@debian.org>  Mon, 12 Jul 2010 19:15:17 +0200

python-defaults (2.6.5-6) unstable; urgency=low

  [ Piotr Ożarowski ]
  * dh_python2:
    - invoke `pycentral pkgremove PACKAGE` in preinst if upgrading from