@@ -6,7 +6,7 @@ override_dh_pysupport:
 	find debian/ -name jquery.js -exec \
 	ln -fs /usr/share/javascript/jquery/jquery.js '{}' \;
 	DH_VERBOSE=1 ../../dh_python2\
-		--depend 'SQLAlchemy >= 0.6.1'\
-		--recommend Mako\
-		--suggest 'Foo >= 0.1'\
-		--suggest 'bar >= 1.0'
+		--depends 'SQLAlchemy >= 0.6.1'\
+		--recommends Mako\
+		--suggests 'Foo >= 0.1'\
+		--suggests 'bar >= 1.0'
